--- a/style/main.css
+++ b/style/main.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial Sans-Serif;
+  transition: .5s;
 }
 
 /* UTILITY CLASSES */
@@ -21,7 +22,7 @@
   --ctrl-txt-dark: hsla(175.1,100%,76.1%,0.923);
   --btn-dark: linear-gradient(45deg,hsl(242.9,100%,12.4%),hsl(229.4,82.7%,36.3%));
   --text-dark: hsl(176.2,100%,50.2%);
-  --dark-shadow: 1px 1px 5px hsla(176.2,100%,50.2%,0.6);
+  --dark-shadow: 0px 0px 10px hsla(176.2,100%,50.2%,0.5);
 
   /* light theme */
   --body-light: hsl(176,100%,50%);
@@ -31,7 +32,7 @@
   --ctrl-txt-light: hsla(175.1,100%,15%,0.923);
   --btn-light: linear-gradient(45deg,#0272AE,#2BFFDD);
   --text-light: hsl(242.5,100%,4.7%);
-  --light-shadow: hsla(242.5,100%,4.7%,0.6);
+  --light-shadow: 0px 0px 10px hsla(242.5,100%,4.7%,0.5);
 }
 
 @media (min-aspect-ratio:43/64) {
@@ -45,13 +46,37 @@ body {
   height: 100vh;
   display: grid;
   place-items: center;
-  background-color: var(--body-dark);
+  background: var(--body-dark);
+}
+
+[data-theme="light"] {
+  background: var(--body-light);
+}
+
+.theme-toggle {
+  width: calc(var(--width)/5);
+  padding: .5% 2%;
+  font-size: calc(var(--width)/16);
+  text-align: center;
+  border-radius: 10px;
+  border: var(--dark-border);
+  background: var(--btn-dark);
+  color: var(--text-dark);
+  box-shadow: var(--light-shadow);
+  transition-delay: .5s;
+}
+
+[data-theme="light"] .theme-toggle {
+  border: var(--light-border);
+  background: var(--btn-light);
+  color: var(--text-light);
+  box-shadow: var(--dark-shadow);
 }
 
 .container {
   width: var(--width);
   height: var(--heght);
-  background-image: var(--body-dark);
+  background: var(--body-dark);
   border-radius: 20px;
   border: var(--dark-border);
   display: flex;
@@ -61,16 +86,26 @@ body {
   box-shadow: var(--dark-shadow);
 }
 
+[data-theme="light"] .container {
+  background: var(--body-light);
+  border: var(--light-border);
+  box-shadow: var(--light-shadow);
+}
+
 /* SCREEN STYLES */
 
 .screen {
   width: 97%;
   height: 24%;
-  background-color: var(--screen-dark);
+  background: var(--screen-dark);
   border-radius: 20px 20px 0 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+}
+
+[data-theme="light"] .screen {
+  background: var(--screen-light);
 }
 
 .screen__main , .screen__result {
@@ -82,6 +117,10 @@ body {
   display: grid;
   place-items: center right;
   transition: 0.5s;
+}
+
+[data-theme="light"] :is(.screen__main,.screen__result) {
+  color: var(--text-light);
 }
 
 .screen__main {
@@ -109,17 +148,28 @@ body {
 .ctrl {
   width: 25%;
   height: 100%;
-  background-color: var(--ctrl-dark);
+  background: var(--ctrl-dark);
   text-align: center;
   color: var(--ctrl-txt-dark);
 }
 
+[data-theme="light"] .ctrl {
+  background: var(--ctrl-light);
+  color: var(--ctrl-txt-light);
+}
+
 .left, .right {
-  background-image: var(--btn-dark);
+  background: var(--btn-dark);
   color: var(--text-dark);
   border-right: 1px solid black;
   border-left: 1px solid black;
   border-collapse: collapse;
+  transition-delay: .5s;
+}
+
+[data-theme="light"] :is(.left,.right) {
+  background: var(--btn-light);
+  color: var(--text-light);
 }
 
 .btns__nums {
@@ -143,5 +193,11 @@ body {
   background: var(--btn-dark);
   color: var(--text-dark);
   box-shadow: var(--dark-shadow);
-  transition: 0.5s;
+  transition-delay: 0.5s;
+}
+
+[data-theme="light"] .btn {
+  background: var(--btn-light);
+  color: var(--text-light);
+  box-shadow: var(--light-shadow);
 }
